# DataEngineering

./: README.md
Learning/: manifest.mf
Learning/Module 01 - Introduction/: 1.0 Table of Contents.ipynb  1.1 Data Engineering.ipynb  1.2 Data Roles.ipynb  1.3 OLAP vs OLTP.ipynb  1.4 A Brief History.ipynb  1.5 Set up your cluster.ipynb  1.6 Notebooks basics.ipynb  1.7 Local Environment setup.ipynb
Learning/Module 02 - Data Architecture/: 2.0 Table of Contents.ipynb  2.1 Data Architecture.ipynb  2.2 Data Formats.ipynb  2.3 Apache Spark Primer.ipynb  2.4 Gentle Introduction to Apache Spark.ipynb
Learning/Module 03 - Data Ingestion and Basic Transformations/: 3.0 Table of Contents.ipynb  3.1 Data Platforms.ipynb  3.2 Data Mesh.ipynb  3.3 Practice Domain Introduction.ipynb  3.4 Last Connection Time of Charge Points.ipynb
Learning/Module 04 - Advanced Transformations/: 4.0 Advanced Transformations.ipynb
databricks_helpers/: pyproject.toml
databricks_helpers/src/databricks_helpers/: databricks_helper.py
eco-pulse/: README.md  aqi-bronze.py  aqi-gold.py  aqi-silver-batch.py  aqi-silver.py  aqi-streaming-simulation.py  data-generation-aqi.py  data-generation-population.py  data-generation-surface-temp.py
weather-driven-aviation-analytics/: Readme.md  Weather_Impact.dbquery.ipynb  data_creation_bts.ipynb  data_creation_meteostat.ipynb  data_pipeline_bronze.ipynb  data_pipeline_bronze_bts.ipynb  data_pipeline_bronze_weather.ipynb  data_pipeline_bts.ipynb  data_pipeline_gold.ipynb  data_pipeline_silver.ipynb  fetch_bts_data.py  ingestion.ipynb
(+115 files in other folders)
